[package]
name = "verifier-wasm-tester"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "Tool to generate input for Wasm verifier"
exclude = { workspace = true }
license-file = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ark-std = { workspace = true }
bincode = { workspace = true }
proof-of-sql = { path = "../proof-of-sql", default-features = false }
